# TradeSystem

./: CMakeLists.txt  MdSpi.cpp  MdSpi.h  README.md  TdSpi.cpp  TdSpi.h  TradeSystem.cpp  TradeSystem.h  TradeSystem.qrc  TradeSystem.ui  main.cpp
config/: config.xml
